share/test/regression/type_check/fail/issue_13b.v
genvar i;
for (i = 0; i < 10; i = i + 1) begin : FOO
  wire x;
end
initial $display(FOO[1].x[Q]);
